# getting-song-lyrics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/getting_song_lyrics/: main.py
tests/: mock_file.html  mock_file.json  mock_key.json  response_without_hits.json  test_main.py  wrong_key.json
